Replaced Observer/Observable with PropertyChangeEvents